k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-clinic
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: pet-clinic
  template:
    metadata:
      labels:
        app: pet-clinic
    spec:
      containers:
      - image: muratulker/pet-clinic:0.0.1
        name: clinic
        ports:
        - containerPort: 8080
