k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pet-clinic
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: pet-clinic
